[gd_scene load_steps=6 format=3 uid="uid://cgms55y27m3u5"]

[ext_resource type="Script" path="res://scripts/coal_minigame.gd" id="1_rq1up"]
[ext_resource type="Texture2D" uid="uid://c5lbqy8enuj88" path="res://sprites/coal game/furnace.png" id="1_x6ulx"]
[ext_resource type="Texture2D" uid="uid://ctvgales5gmuw" path="res://sprites/coal game/overlay_closed.png" id="2_23ksj"]
[ext_resource type="Texture2D" uid="uid://t7mdgxovj1fo" path="res://sprites/coal game/shovel.png" id="3_inkym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jj5pk"]
size = Vector2(420, 300)

[node name="coal minigame" type="Node2D"]
script = ExtResource("1_rq1up")
coalNeeded = 30
coalToExplode = 50
coalPerScoop = 8
coalSpread = 90
coalSpeed = 100.0
coalFlingMaxSpeed = 1700.0
coalFlingSpeedVariance = 0.6
coalFlingAngleVariance = 0.7
coalFlingTorqueVariance = 100.0

[node name="furnace" type="Sprite2D" parent="."]
texture = ExtResource("1_x6ulx")
centered = false

[node name="overlay" type="Sprite2D" parent="."]
texture = ExtResource("2_23ksj")
centered = false

[node name="scoop" type="Sprite2D" parent="."]
position = Vector2(344, 344)
texture = ExtResource("3_inkym")

[node name="coal_button" type="Button" parent="."]
offset_left = 1320.0
offset_top = 615.0
offset_right = 1920.0
offset_bottom = 1080.0
focus_mode = 0
toggle_mode = true
action_mode = 0
flat = true

[node name="lever_button" type="Button" parent="."]
offset_left = 319.0
offset_top = 480.0
offset_right = 529.0
offset_bottom = 1080.0
focus_mode = 0
toggle_mode = true
flat = true

[node name="lever_button_alt" type="Button" parent="."]
offset_left = 2.0
offset_top = 644.0
offset_right = 172.0
offset_bottom = 1286.0
rotation = -0.594996
focus_mode = 0
disabled = true
toggle_mode = true
flat = true

[node name="furnace_button" type="Button" parent="."]
visible = false
offset_left = 836.0
offset_top = 691.0
offset_right = 1256.0
offset_bottom = 991.0
focus_mode = 0
toggle_mode = true
flat = true

[node name="furnace_trigger" type="Area2D" parent="."]
position = Vector2(1046, 841)
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="furnace_trigger"]
shape = SubResource("RectangleShape2D_jj5pk")

[node name="debugtext" type="RichTextLabel" parent="."]
offset_left = 60.0
offset_top = 40.0
offset_right = 660.0
offset_bottom = 240.0
theme_override_font_sizes/normal_font_size = 50
text = "coal: 0 of 0"
fit_content = true
scroll_active = false

[connection signal="pressed" from="coal_button" to="." method="_on_coal_button_pressed"]
[connection signal="pressed" from="lever_button" to="." method="_on_lever_button_pressed"]
[connection signal="pressed" from="lever_button_alt" to="." method="_on_lever_button_pressed"]
[connection signal="body_entered" from="furnace_trigger" to="." method="_on_furnace_trigger_entered"]
